# eurocropsml

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml  tox.ini
.github/workflows/: ci.yml  pypi.yml
csvs/: cropclasses.csv
docs/: api.rst  cli.md  conf.py  dataset.md  examples.md  index.md  license.md  starting.md
docs/_static/: custom.css
docs/_templates/: custom-class.rst
eurocropsml/: cli.py  settings.py  utils.py
eurocropsml/acquisition/: __init__.py  analysis.py  build.py  builder.py  cli.py  clipper.py  collector.py  config.py  copier.py  region.py  utils.py
eurocropsml/acquisition/clipping/: __init__.py  calibration.py  clipper.py  s1_preprocessing.py  utils.py
eurocropsml/configs/acquisition/: config.yaml
eurocropsml/configs/acquisition/cfg/: austria.yaml  estonia.yaml  latvia.yaml  portugal.yaml  spainna.yaml
eurocropsml/configs/dataset/: config.yaml
eurocropsml/configs/dataset/preprocess/: default.yaml
eurocropsml/configs/dataset/split/: default.yaml  overlap_latvia.yaml  overlap_portugal.yaml  portugal.yaml
eurocropsml/dataset/: __init__.py  base.py  cli.py  config.py  dataset.py  download.py  preprocess.py  splits.py  utils.py
requirements/: requirements-dev.in  requirements-docs.in  requirements-tests.in  requirements.in
tests/acquisition/: test_cli.py
tests/dataset/: test_cli.py  test_dataset.py  test_preprocess.py  test_split.py  test_utils.py
